Created the sonar workflow and the file sonar properties

--- a/package.json
+++ b/package.json
@@ -44,5 +44,16 @@
   },
   "devDependencies": {
     "husky": "^8.0.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.tsx",
+      "src/**/*.ts",
+      "!src/index.tsx",
+      "!src/react-app-env.d.ts",
+      "!src/reportWebVitals.ts",
+      "!src/**/.test.tsx",
+      "!src/setupTests.ts"
+    ]
   }
 }
